objects/LLC_BI__Document_Version__c.object
<CustomObject>
    <description>The Version Data object stores placeholder version history.</description>
    <fields>
        <fullName>LLC_BI__Content_Version_Id__c</fullName>
        <description>This field is not required but is automatically populated. It is a soft reference to Convent Version.</description>
        <label>Content Version</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field auto-populates and is required. This field associates the Document Store record where the file is held.</description>
        <label>Document Store</label>
        <referenceTo>LLC_BI__Document_Store__c</referenceTo>
        <relationshipLabel>Document Versions</relationshipLabel>
        <relationshipName>Document_Version_Store_Indices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Enlarged_Preview_URL__c</fullName>
        <description>This field is populated automatically via formula. This field stores the contents enlarged preview url.</description>
        <formula>if(LLC_BI__File_Extension__c = &apos;png&apos; || LLC_BI__File_Extension__c = &apos;jpg&apos; || LLC_BI__File_Extension__c = &apos;jpeg&apos; || LLC_BI__File_Extension__c = &apos;bmp&apos; || LLC_BI__File_Extension__c = &apos;tiff&apos; || LLC_BI__File_Extension__c = &apos;tif&apos;,
			&quot;/sfc/servlet.shepherd/version/download/&quot;+LLC_BI__Content_Version_Id__c+&quot;?asPdf=false&amp;operationContext=CHATTER&quot;,
			&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=SVGZ&amp;versionId=&quot; + LLC_BI__Content_Version_Id__c)</formula>
        <label>Enlarged Preview URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Download_URL__c</fullName>
        <description>An automatically populated download link for a file hosted on external storage.</description>
        <label>External Download URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_ID__c</fullName>
        <description>An automatically populated external ID for a document stored on external storage.</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Preview_URL__c</fullName>
        <description>An automatically populated full-preview link for a file hosted on external storage (if available).</description>
        <label>External Preview URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Thumbnail_URL__c</fullName>
        <description>An automatically populated thumbnail-preview link for a file hosted on external storage (if available).</description>
        <label>External Thumbnail URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LLC_BI__File_Extension__c</fullName>
        <description>This field is not required but is automatically populated. This text field is used to specify a file extension.</description>
        <label>File Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__File_Type__c</fullName>
        <description>This field is not required but is automatically populated. This text field is used to specify a file type.</description>
        <label>File Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offloaded_Date__c</fullName>
        <description>An automatically populated time stamp on the document version record specifying the last time a document (and its associated metadata) was offloaded to external storage.</description>
        <label>Offloaded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Offloaded__c</fullName>
        <description>An automatically populated indicator on the document version record specifying the document (and its associated metadata) has been offloaded to external storage.</description>
        <formula>IF(ISNULL(LLC_BI__Offloaded_Date__c), false, true)</formula>
        <label>Offloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Placeholder_Id__c</fullName>
        <description>This field is not required but is automatically populated. It is a soft reference to a placeholder.</description>
        <label>Placeholder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Preview_URL__c</fullName>
        <description>This field is populated automatically via formula. This field stores the contents preview url.</description>
        <formula>&quot;/sfc/servlet.shepherd/version/renditionDownload?rendition=THUMB720BY480&amp;versionId=&quot; + LLC_BI__Content_Version_Id__c</formula>
        <label>Preview URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Published_Date__c</fullName>
        <description>An automatically populated time stamp on the document version record specifying when the document (and its associated metadata) was successfully published to external storage.</description>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Published__c</fullName>
        <description>An automatically populated indicator on the document version record specifying the document has been successfully published to external storage.</description>
        <formula>IF(ISNULL(LLC_BI__Published_Date__c), false, true)</formula>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ready_For_Offload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An automatically populated indicator on the document version record specifying that a document has met the criteria for offload to external storage.</description>
        <label>Ready for Offload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Title__c</fullName>
        <description>This field is required but is automatically populated. This text field is used to specify a file title.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Preview_Format__c</fullName>
        <description>The system automatically populates this text field to indicate the format of the document preview.</description>
        <label>Preview Format</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDOC__Preview_Url_Count__c</fullName>
        <description>This value represents the number of possible preview URLs that exist for the current document version.</description>
        <label>Preview Url Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Corrections__c</fullName>
        <description>Stores the JSON representation of corrections made to the OCR results. Defaults to empty. Will be populated automatically when OCR value corrections are saved.</description>
        <label>Data Recognition Corrections</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Request_Id__c</fullName>
        <description>The response token recieved when the document was submitted to AWS used for calls in the same context.</description>
        <label>Data Recognition Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Results__c</fullName>
        <description>Stores the JSON representation of the OCR results. Defaults to empty. Will be populated automatically when OCR is completed.</description>
        <label>Data Recognition Results</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ncinoocr__OCR_Status__c</fullName>
        <description>The OCR document status field is used to track the document&apos;s progress through the OCR process. Defaults to an empty string. Field is not required.</description>
        <label>Data Recognition Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Version</label>
    <nameField>
        <displayFormat>DV-{0000000000}</displayFormat>
        <label>Document Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>